--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+      <!-- swiper cdn  -->
+      <link
+         rel="stylesheet"
+         href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+      />
       <title>Ariful Hasan</title>
    </head>
    <body>
